XMLtoCSV/objects/unpackaged/objects/EM_Event_Budget_vod__c.object
<CustomObject>
    <description>A budget that is being used for a particular event for Veeva Event Management.</description>
    <fields>
        <fullName>Actual_vod__c</fullName>
        <description>Amount of funds disbursed for an event from a specific budget.</description>
        <label>Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Name_vod__c</fullName>
        <description>Displays the name of the budget</description>
        <formula>Budget_vod__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The budget being accessed by the event.</description>
        <label>Budget</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EM_Budget_vod__c.Status_vod__c</field>
                <operation>equals</operation>
                <value>Available_For_Use_vod</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EM_Budget_vod__c</referenceTo>
        <relationshipLabel>Event Budgets</relationshipLabel>
        <relationshipName>EM_Event_Budget_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Committed_vod__c</fullName>
        <description>Amount of funds committed for an event from a specific budget.</description>
        <label>Committed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimate_vod__c</fullName>
        <description>Estimated cost of an event that will come from a specific budget.</description>
        <label>Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Remaining_vod__c</fullName>
        <description>The amount available in the budget being accessed by the event.</description>
        <formula>Budget_vod__r.Estimated_Remaining_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Canceled_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked automatically if the associated event is canceled.</description>
        <label>Event Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The event that is accessing the budget</description>
        <label>Event</label>
        <referenceTo>EM_Event_vod__c</referenceTo>
        <relationshipLabel>Event Budgets</relationshipLabel>
        <relationshipName>Event_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by mobile products for synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for data loads.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <label>Event Budget</label>
    <nameField>
        <displayFormat>EB-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Budgets</pluralLabel>
    <recordTypes>
        <fullName>Event_Budget_vod</fullName>
        <active>true</active>
        <description>Event Budget</description>
        <label>Event_Budget_vod</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Event_Team_Member_vod__c</fullName>
        <label>Event Team Member</label>
    </sharingReasons>
</CustomObject>